force-app/main/default/objects/FW_Service_Setting__mdt/FW_Service_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Service Settings</description>
    <label>FW Service Setting</label>
    <pluralLabel>FW Service Settings</pluralLabel>
</CustomObject>