force-app/main/default/objects/FW_Service_Setting__mdt/fields/Compressed__c.field-meta.xml
<CustomField>
    <fullName>Compressed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compressed</label>
    <type>Checkbox</type>
</CustomField>