force-app/main/default/objects/FW_Service_Setting__mdt/fields/CustomCredential__c.field-meta.xml
<CustomField>
    <fullName>CustomCredential__c</fullName>
    <label>Custom Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>