force-app/main/default/objects/FW_Service_Setting__mdt/fields/EndpointParameters__c.field-meta.xml
<CustomField>
    <fullName>EndpointParameters__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Endpoint Parameters</label>
    <type>Checkbox</type>
</CustomField>