force-app/main/default/objects/FW_Service_Setting__mdt/fields/HeaderName__c.field-meta.xml
<CustomField>
    <fullName>HeaderName__c</fullName>
    <label>Header Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>