force-app/main/default/objects/FW_Service_Setting__mdt/fields/InputClass__c.field-meta.xml
<CustomField>
    <fullName>InputClass__c</fullName>
    <label>Input Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>