force-app/main/default/objects/FW_Service_Setting__mdt/fields/LogRequest__c.field-meta.xml
<CustomField>
    <fullName>LogRequest__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Log Request</label>
    <type>Checkbox</type>
</CustomField>