force-app/main/default/objects/FW_Service_Setting__mdt/fields/LogRequestPII__c.field-meta.xml
<CustomField>
    <fullName>LogRequestPII__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Log Request PII (No PII)</label>
    <type>Checkbox</type>
</CustomField>