force-app/main/default/objects/FW_Service_Setting__mdt/fields/LogResponse__c.field-meta.xml
<CustomField>
    <fullName>LogResponse__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Log Response</label>
    <type>Checkbox</type>
</CustomField>