force-app/main/default/objects/FW_Service_Setting__mdt/fields/LogResponsePII__c.field-meta.xml
<CustomField>
    <fullName>LogResponsePII__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Log Response PII (No PII)</label>
    <type>Checkbox</type>
</CustomField>