force-app/main/default/objects/FW_Service_Setting__mdt/fields/LogStatus__c.field-meta.xml
<CustomField>
    <fullName>LogStatus__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Log Status</label>
    <type>Checkbox</type>
</CustomField>