force-app/main/default/objects/FW_Service_Setting__mdt/fields/MockResponse__c.field-meta.xml
<CustomField>
    <fullName>MockResponse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mock Response</label>
    <type>Checkbox</type>
</CustomField>