force-app/main/default/objects/FW_Service_Setting__mdt/fields/OutputClass__c.field-meta.xml
<CustomField>
    <fullName>OutputClass__c</fullName>
    <label>Output Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>