force-app/main/default/objects/FW_Service_Setting__mdt/fields/ProcessingClass__c.field-meta.xml
<CustomField>
    <fullName>ProcessingClass__c</fullName>
    <label>Processing Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>