force-app/main/default/objects/FW_Service_Setting__mdt/listViews/ViewAll.listView-meta.xml
<ListView>
    <fullName>ViewAll</fullName>
    <columns>MasterLabel</columns>
    <columns>LogStatus__c</columns>
    <columns>LogWithCallout__c</columns>
    <columns>LogRequest__c</columns>
    <columns>LogResponse__c</columns>
    <columns>LogRequestPII__c</columns>
    <columns>LogResponsePII__c</columns>
    <columns>LogFail__c</columns>
    <columns>NotifyFailure__c</columns>
    <columns>NamedCredential__c</columns>
    <filterScope>Everything</filterScope>
    <label>ViewAll</label>
    <language>en_US</language>
</ListView>